# EngineSimAutoRecorder

./: .gitignore  EngineSimAutoRecorder.sln  README.md  RELEASE_v1.0.0.md  STATUS.md  test_string.cs
EngineSimHook/: CMakeLists.txt
EngineSimHook/src/: common.h  dllmain.cpp  hooks.cpp  hooks.h  log.cpp  log.h  memory.cpp  memory.h  pipe.cpp  pipe.h
EngineSimRecorder/: App.xaml  App.xaml.cs  EngineSimRecorder.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  app.manifest
EngineSimRecorder/Backends/Injection/: InjectionBackend.cs
EngineSimRecorder/Backends/Keyboard/: KeyboardBackend.cs
EngineSimRecorder/Backends/Ocr/: OcrBackend.cs
EngineSimRecorder/Core/: AppSettings.cs  AudioRpmEstimator.cs  AutomationWorkspace.cs  ExteriorProcessor.cs  HarmonicExciter.cs  IEngineBackend.cs  InteriorProcessor.cs  KeyboardSim.cs  PidController.cs  RecorderConfig.cs  RpmProfile.cs  TransientShaper.cs
EngineSimRecorder/Helpers/: MouseWheelHelper.cs
EngineSimRecorder/Pages/: LogPage.xaml  LogPage.xaml.cs  OptionsPage.xaml  OptionsPage.xaml.cs  PageContext.cs  RecorderPage.xaml  RecorderPage.xaml.cs
EngineSimRecorder/Properties/PublishProfiles/: Distribution.pubxml  (+1 more)
EngineSimRecorder/Services/: AutomationService.cs  FmodEs3Validator.cs  FmodImportResult.cs  FmodPostBuildHandler.cs  FmodProjectCloner.cs  FmodResponseException.cs  FmodScriptGenerator.cs  FmodTcpService.cs
EngineSimRecorder/View/: MainWindow.xaml  MainWindow.xaml.cs
EngineSimRecorder/ViewModel/: MainWindowViewModel.cs
assets/: fmod_import_recordings.js
(+21 files in other folders)
